<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LocationActivity">

    <TextView
        android:id="@+id/chooseLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/yeon_sung"
        android:layout_marginBottom="5dp"
        android:text="@string/location_title"
        android:textColor="@color/normal_text_color"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="19dp"
        android:background="@drawable/white_rounded"
        android:shadowColor="@color/white_stroke"
        android:textColor="@color/normal_text_color"
        android:textColorHint="@color/edit_text_color"
        app:endIconDrawable="@drawable/ic_set_location"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18">
        <AutoCompleteTextView
            android:id="@+id/listOfLocation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none"
            android:fontFamily="@font/lato"
            android:textSize="14sp"
            android:text="@string/choose_location"
             />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="19dp"
        android:layout_marginTop="84dp"
        android:fontFamily="@font/lato"
        android:text="@string/choose_location_description"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:layout_constraintVertical_bias="0.199" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/locationDoneButton"
        android:layout_width="157dp"
        android:layout_height="57dp"
        android:background="@drawable/red_button_gradient"
        android:fontFamily="@font/yeon_sung"
        android:shadowColor="@color/white_stroke"
        android:text="@string/done"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.739" />

</androidx.constraintlayout.widget.ConstraintLayout>