<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/loginLogo"
        android:layout_width="91dp"
        android:layout_height="92dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toTopOf="@+id/loginAppName"
        app:layout_constraintEnd_toEndOf="@+id/loginAppName"
        app:layout_constraintStart_toStartOf="@+id/loginAppName"
        app:srcCompat="@drawable/background_logo" />

    <TextView
        android:id="@+id/loginAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/yeon_sung"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/normal_text_color"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textDeliverFavoriteFood"
        app:layout_constraintEnd_toEndOf="@+id/textDeliverFavoriteFood"
        app:layout_constraintStart_toStartOf="@+id/textDeliverFavoriteFood" />

    <TextView
        android:id="@+id/textDeliverFavoriteFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/lato"
        android:text="@string/splash_description"
        android:textColor="@color/normal_text_color"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textLoginToYourAccount"
        app:layout_constraintEnd_toEndOf="@+id/textLoginToYourAccount"
        app:layout_constraintHorizontal_bias="0.455"
        app:layout_constraintStart_toStartOf="@+id/textLoginToYourAccount" />

    <TextView
        android:id="@+id/textLoginToYourAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato"
        android:text="@string/login_title"
        android:textColor="@color/normal_text_color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.359" />

    <EditText
        android:id="@+id/username"
        android:layout_width="262dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:autoLink="phone|email"
        android:autofillHints="emailAddress"
        android:background="@drawable/white_rounded"
        android:elevation="5dp"
        android:ems="10"
        android:fontFamily="@font/lato"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:shadowColor="@color/white_stroke"
        android:textColor="@color/normal_text_color"
        android:textColorHint="@color/edit_text_color"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/textLoginToYourAccount"
        app:layout_constraintStart_toStartOf="@+id/textLoginToYourAccount"
        app:layout_constraintTop_toBottomOf="@+id/textLoginToYourAccount" />

    <EditText
        android:id="@+id/password"
        android:layout_width="262dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:autofillHints="password"
        android:background="@drawable/white_rounded"
        android:elevation="5dp"
        android:ems="10"
        android:fontFamily="@font/lato"
        android:hint="@string/prompt_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:shadowColor="@color/white_stroke"
        android:textColor="@color/normal_text_color"
        android:textColorHint="@color/edit_text_color"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/username"
        app:layout_constraintStart_toStartOf="@+id/username"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <TextView
        android:id="@+id/textOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/yeon_sung"
        android:text="or"
        android:textAlignment="center"
        android:textColor="@color/normal_text_color"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password"
        tools:ignore="HardcodedText,SmallSp" />

    <TextView
        android:id="@+id/textContinueWith"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/yeon_sung"
        android:text="@string/continue_with"
        android:textAlignment="center"
        android:textColor="@color/normal_text_color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textOr"
        app:layout_constraintStart_toStartOf="@+id/textOr"
        app:layout_constraintTop_toBottomOf="@+id/textOr"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginFacebookButton"
        android:layout_width="152dp"
        android:layout_height="57dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/white_rounded"
        android:drawableStart="@drawable/ic_facebook"
        android:fontFamily="@font/lato"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:shadowColor="@color/white_stroke"
        android:text="Facebook"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@+id/textContinueWith"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/textContinueWith"
        tools:ignore="HardcodedText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginGoogleButton"
        android:layout_width="152dp"
        android:layout_height="57dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/white_rounded"
        android:drawableStart="@drawable/ic_google"
        android:fontFamily="@font/lato"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:shadowColor="@color/white_stroke"
        android:text="Google"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toEndOf="@+id/textContinueWith"
        app:layout_constraintTop_toBottomOf="@+id/textContinueWith"
        tools:ignore="HardcodedText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        android:layout_width="157dp"
        android:layout_height="57dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/red_button_gradient"
        android:fontFamily="@font/yeon_sung"
        android:shadowColor="@color/white_stroke"
        android:text="@string/login_action"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/loginGoogleButton"
        app:layout_constraintStart_toStartOf="@+id/loginFacebookButton"
        app:layout_constraintTop_toBottomOf="@+id/loginFacebookButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dontHaveAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:fontFamily="@font/lato"
        android:text="@string/don_t_have_account"
        android:textColor="@color/normal_text_color"
        android:textSize="10sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        tools:ignore="SmallSp" />

</androidx.constraintlayout.widget.ConstraintLayout>