<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/main_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <FrameLayout
                    android:id="@+id/containerFragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="262dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="40dp"
                    android:autofillHints="name"
                    android:background="@drawable/white_rounded"
                    android:drawableStart="@drawable/ic_person"
                    android:drawablePadding="10dp"
                    android:elevation="5dp"
                    android:ems="10"
                    android:fontFamily="@font/lato"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:selectAllOnFocus="true"
                    android:shadowColor="@color/white_stroke"
                    android:textColor="@color/normal_text_color"
                    android:textColorHint="@color/edit_text_color"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="262dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="16dp"
                    android:autoLink="phone|email"
                    android:autofillHints="emailAddress"
                    android:background="@drawable/white_rounded"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="10dp"
                    android:elevation="5dp"
                    android:ems="10"
                    android:fontFamily="@font/lato"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:selectAllOnFocus="true"
                    android:shadowColor="@color/white_stroke"
                    android:textColor="@color/normal_text_color"
                    android:textColorHint="@color/edit_text_color"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="262dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="16dp"
                    android:autofillHints="password"
                    android:background="@drawable/white_rounded"
                    android:drawableStart="@drawable/ic_password_1"
                    android:drawablePadding="10dp"
                    android:elevation="5dp"
                    android:ems="10"
                    android:fontFamily="@font/lato"
                    android:hint="@string/prompt_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:selectAllOnFocus="true"
                    android:shadowColor="@color/white_stroke"
                    android:textColor="@color/normal_text_color"
                    android:textColorHint="@color/edit_text_color"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/yeon_sung"
                    android:text="@string/or"
                    android:textAlignment="center"
                    android:textColor="@color/normal_text_color"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    tools:ignore="SmallSp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/yeon_sung"
                    android:text="@string/sign_up_with"
                    android:textAlignment="center"
                    android:textColor="@color/normal_text_color"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/facebookButton"
                        android:layout_width="152dp"
                        android:layout_height="57dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/white_rounded"
                        android:drawableStart="@drawable/ic_facebook"
                        android:fontFamily="@font/lato"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:shadowColor="@color/white_stroke"
                        android:text="Facebook"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        tools:ignore="HardcodedText" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/googleButton"
                        android:layout_width="152dp"
                        android:layout_height="57dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/white_rounded"
                        android:drawableStart="@drawable/ic_google"
                        android:fontFamily="@font/lato"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:shadowColor="@color/white_stroke"
                        android:text="Google"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        tools:ignore="HardcodedText" />
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/createAccount"
                    android:layout_width="157dp"
                    android:layout_height="57dp"
                    android:background="@drawable/red_button_gradient"
                    android:fontFamily="@font/yeon_sung"
                    android:shadowColor="@color/white_stroke"
                    android:text="@string/create_account"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    tools:ignore="TextSizeCheck" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminateTint="@color/white"
                    android:visibility="gone" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/alreadyHaveAccountButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:background="@null"
                    android:fontFamily="@font/lato"
                    android:text="@string/already_have_an_account"
                    android:textAllCaps="false"
                    android:textColor="@color/normal_text_color"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    tools:ignore="SmallSp" />
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>